PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Apr 2007, PHP 5.2.2RC2
- Fixed bug #41063 (chdir doesn't like root paths). (Dmitry)
- Fixed bug #40861 (strtotime() doesn't handle double negative relative time
  units correctly). (Derick)


10 Apr 2007, PHP 5.2.2RC1
- Improved bundled GD
  . Sync to 2.0.35
  . colors allocated henceforth from the resulting image overwrite the palette 
	  colors (Rob Leslie)
  . Improved thread safety of the gif support (Roman Nemecek, Nuno, Pierre)
	. Use the dimension of the GIF frame to create the destination image (Pierre)
	. Load only once the local color map (Pierre)
  . Improved thread safety of the freetype cache (Scott MacVicar, Nuno, Pierre)
- Upgraded libraries bundled in the Windows distribution. (Edin)
  . c-client (imap) to version 2006e
  . libpq (PostgreSQL) to version 8.2.3
  . libmysql (MySQL) to version 5.0.37
  . openssl to version 0.9.8e
- Upgraded SQLite 3 to version 3.3.15 (Ilia)
- Upgraded PCRE to version 7.0 (Nuno)
- Updated timezone database to version 2007.3. (Derick)
- Improved FastCGI SAPI to support external pipe and socket servers on win32.
  (Dmitry)
- Improved Zend Memory Manager
  . guarantee of reasonable time for worst cases of best-fit free block
    searching algorithm. (Dmitry)
  . better cache usage and less fragmentation on erealloc() (Tony, Dmitry)
- Improved SPL (Marcus)
  . Added SplFileInfo::getBasename(), DirectoryIterator::getBasename().
  . Added SplFileInfo::getLinkTarget(), SplFileInfo::getRealPath().
  . Made RecursiveFilterIterator::accept() abstract as stated in documentation.
- Improved SOAP
  . Added ability to encode arrays with "SOAP-ENC:Array" type instead of WSDL
    type. To activate the ability use "feature"=>SOAP_USE_XSI_ARRAY_TYPE
    option in SoapClient/SoapServer constructors. (Rob, Dmitry)